cart name wrapping fix (xl l m ) + mobile version

--- a/style.css
+++ b/style.css
@@ -462,7 +462,6 @@ button {
     }
 }
 
-
 /* BUTTONS */
 
 .button-main {
@@ -701,7 +700,7 @@ button {
     .toggle-switch label:before {
         left: 3px;
     }
-    
+
     .toggle-switch input:checked+label:before {
         transform: translate(15px, -50%);
     }
@@ -951,6 +950,23 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
+}
+
+.cart-xl .prod-title {
+    max-width: 300px;
+    width: 100%;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow-wrap: break-word;
+}
+
+.cart-xl .prod-title h3 {
+    max-width: 300px;
+    width: 100%;
+    text-align: center;
 }
 
 .cart-xl .prod-desc .prod-price {
@@ -970,7 +986,7 @@ button {
 
 @media screen and (max-width: 700px) {
     .cart-xl {
-        gap: 15px;
+        gap: 10px;
         padding: 5px;
         background-color: var(--white);
         border-radius: 5px;
@@ -980,8 +996,21 @@ button {
         max-width: 125px;
     }
 
+    .cart-xl .prod-title {
+        max-width: 125px;
+        height: 34px;
+    }
+
     .cart-xl .prod-desc {
-        gap: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .cart-xl .prod-title h3 {
+        max-width: 125px;
+        width: 100%;
     }
 
     .cart-xl .prod-desc .prod-price {
@@ -1035,7 +1064,18 @@ button {
 .cart-l .prod-desc .prod-title {
     display: flex;
     flex-direction: column;
+    max-width: 400px;
+    width: 100%;
     gap: 15px;
+    overflow-wrap: break-word;
+}
+
+.cart-l .prod-desc .prod-title h3 {
+    height: 58px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-align: left;
 }
 
 .cart-l .cart-bottom {
@@ -1089,7 +1129,17 @@ button {
     }
 
     .cart-l .prod-desc .prod-title {
+        max-width: 180px;
         gap: 10px;
+        overflow-wrap: break-word;
+    }
+    
+    .cart-l .prod-desc .prod-title h3 {
+        height: 28px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        text-align: left;
     }
 
     .cart-l .cart-bottom {
@@ -1149,7 +1199,16 @@ button {
 .cart-m .prod-desc .prod-title {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
+}
+
+.cart-m .prod-desc .prod-title h3{
+    height: 40px;
+    max-width: 250px;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    overflow-wrap: break-word;
 }
 
 .cart-m .prod-desc .prod-title .prod-price {
@@ -1193,7 +1252,7 @@ button {
 
     .cart-m .img-box {
         width: 100%;
-        max-width: 70px;
+        max-width: 80px;
     }
 
     .cart-m .cart-top {
@@ -1207,7 +1266,13 @@ button {
     }
 
     .cart-m .prod-desc .prod-title {
-        gap: 10px;
+        gap: 5px;
+    }
+
+    .cart-m .prod-desc .prod-title h3{
+        height: 22px;
+        max-width: 200px;
+        text-align: left;
     }
 
     .cart-m .prod-desc .prod-title .prod-price {
@@ -2081,3 +2146,124 @@ button {
     flex-direction: column;
 }
 
+/* SLIDER */
+
+.slider {
+    margin: 0 auto;
+    max-width: 940px;
+}
+
+.slide_viewer {
+    height: 340px;
+    overflow: hidden;
+    position: relative;
+}
+
+.slide_group {
+    height: 100%;
+    position: relative;
+    width: 100%;
+}
+
+.slide {
+    display: none;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+}
+
+.slide:first-child {
+    display: block;
+}
+
+.slide:nth-of-type(1) {
+    background: #D7A151;
+}
+
+.slide:nth-of-type(2) {
+    background: #F4E4CD;
+}
+
+.slide:nth-of-type(3) {
+    background: #C75534;
+}
+
+.slide:nth-of-type(4) {
+    background: #D1D1D4;
+}
+
+.slide_buttons {
+    left: 0;
+    position: absolute;
+    right: 0;
+    text-align: center;
+}
+
+a.slide_btn {
+    color: #474544;
+    font-size: 42px;
+    margin: 0 0.175em;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+}
+
+.slide_btn.active,
+.slide_btn:hover {
+    color: #428CC6;
+    cursor: pointer;
+}
+
+.directional_nav {
+    height: 340px;
+    margin: 0 auto;
+    max-width: 940px;
+    position: relative;
+    top: -340px;
+}
+
+.previous_btn {
+    bottom: 0;
+    left: 100px;
+    margin: auto;
+    position: absolute;
+    top: 0;
+}
+
+.next_btn {
+    bottom: 0;
+    margin: auto;
+    position: absolute;
+    right: 100px;
+    top: 0;
+}
+
+.previous_btn,
+.next_btn {
+    cursor: pointer;
+    height: 65px;
+    opacity: 0.5;
+    -webkit-transition: opacity 0.4s ease-in-out;
+    -moz-transition: opacity 0.4s ease-in-out;
+    -ms-transition: opacity 0.4s ease-in-out;
+    -o-transition: opacity 0.4s ease-in-out;
+    transition: opacity 0.4s ease-in-out;
+    width: 65px;
+}
+
+.previous_btn:hover,
+.next_btn:hover {
+    opacity: 1;
+}
+
+@media only screen and (max-width: 767px) {
+    .previous_btn {
+        left: 50px;
+    }
+
+    .next_btn {
+        right: 50px;
+    }
+}
